--- a/frontend-driver/package.json
+++ b/frontend-driver/package.json
@@ -13,16 +13,16 @@
     "@capacitor/android": "^6.0.0",
     "@capacitor/core": "^6.0.0",
     "axios": "^1.6.0",
-    "lucide-react": "^0.263.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "lucide-react": "^0.460.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@capacitor/cli": "^6.0.0",
     "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
@@ -30,9 +30,9 @@
     "globals": "^16.5.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
-    "vite": "^8.0.0-beta.13"
+    "vite": "^5.0.0"
   },
   "overrides": {
-    "vite": "^8.0.0-beta.13"
+    "vite": "^5.0.0"
   }
 }
