--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,11 @@ yarn-error.log*
 .env
 .env.local
 .env.*.local
+backend/.env
+*.env
+
+# Sensitive Documentation
+TWILIO_AND_ANDROID_COMPLETE.md
 
 # Build
 *.egg-info/
